@@ -678,13 +678,3 @@ background-color:#f6f6f6;
 	height: 20px;
 	width: 20px;
 }
-
-.cal-date-picker-wrap{
-	width:230px;
-	margin:auto;
-}
-
-.cal-date-picker-wrap-outer{
-	background-color: #FFF;
-	border-bottom:5px #009CC5 solid;
-}
