@@ -2309,3 +2309,14 @@ body.ext-ie6 .x-superboxselect-item {margin: 2px 1px 2px 1px; line-height: 1.2em
 .permissions-error .x-grid3-cell-inner{
 	color:red;
 }
+
+
+.go-date-picker-wrap{
+	width:230px;
+	margin:auto;
+}
+
+.go-date-picker-wrap-outer{
+	background-color: #FFF;
+	border-bottom:5px #009CC5 solid;
+}
